[package]
name = "rpsrtsrs"
version = "0.1.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]

[dependencies]
rand = "0.3"
piston = "0.32"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.45"
bincode = "0.8"
serde_derive = "1.0"
serde = "1.0"
docopt = "0.8"

[dependencies.pistoncore-sdl2_window]
version = "0.43"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.34"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.38"
optional = true

[features]
default = ["include_sdl2"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]

