[package]
name = "rpsrtsrs"
version = "0.1.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.4"
piston = "0.53"
piston2d-opengl_graphics = "0.78"
piston-texture = "0.8"
bincode = "1.3.3"
serde_derive = "1.0"
serde = "1.0"
docopt = "1.1.1"
cgmath = { version = "0.18", features = ["serde"] }
num = "0.4"
log = "0.4.14"
env_logger = "0.11.3"

[dependencies.piston2d-graphics]
version = "0.40"
#features = ["glyph_cache_rusttype"]

[dependencies.pistoncore-sdl2_window]
version = "0.67"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.72"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.69"
optional = true

[features]
default = ["include_glfw"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]

